--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
     <link rel="stylesheet" href="./src/css/main.css">
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <!-- #region wrapper-->
+     <div class="wrapper">
+       <!-- #region menu-->
+        <div class="menu">
+          <nav class="nav">
+            <div class="nav-item"><a href="#" class="nav-item-link">home</a></div>
+            <div class="nav-item"><a href="#" class="nav-item-link">about</a></div>
+            <div class="nav-item"><a href="#" class="nav-item-link">contact</a></div>
+            <div class="nav-item"><a href="#" class="nav-item-link">gallery</a></div>
+            
+          </nav>
+        </div>
+         <!-- #endregion menu-->
+     </div>
+    <!-- #endregion wrapper-->
+  
+    
   </body>
 </html>
