--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
 
             </div>
            <!-- #endregion product-->
+           <!-- #region footer-->
+           <footer>
+          <p>design by arezou &copy;2025</p>
+           </footer>
+           <!-- #endregion footer-->
 
      </div>
     <!-- #endregion wrapper-->
